# erika

./: .env  Cargo.toml
migrations/: 20250805110258_create_erikas_and_roles.sql  20250805121625_create_sessions_table.sql  20250805152716_add_profile_image_to_erikas.sql  20250805153733_create_galleries_table.sql  20250805153814_create_photos_table.sql  20250805163419_add_bio_and_status_to_erikas.sql  20250806151341_gallery_name_to_category_enum.sql
src/: errors.rs  main.rs  middleware.rs  router.rs
src/handlers/: admin_handlers.rs  erika_handlers.rs  gallery_handlers.rs  layout.rs  mod.rs
src/models/: erika.rs  gallery.rs  mod.rs  photo.rs
uploads/: a833d5cf-df61-4399-b120-681d106b0149_1754510667.avif
